# railroaded

./: .gitignore  CODEBASE.md  README.md  pyproject.toml
python/: README.md  pyproject.toml
python/railroaded/: __init__.py  gtfs.py  util.py
python/railroaded/models/: __init__.py  agency.py  calendar.py  calendar_date.py  date_range.py  feed.py  route.py  schedule.py  shape.py  shape_point.py  stop_continuity.py  stop_time.py  timetable.py  trip.py
python/railroaded/tables/: __init__.py  agencies.py  routes.py  schedules.py  shapes.py  stops.py  trips.py
python/tests/: conftest.py  septa_cache.json  test_gtfs.py  test_patco.py  test_shapes.py
railroaded/: gtfs.py
railroaded/models/: accessibility.py  stop.py
railroaded/tables/: trips.py
typescript/: package.json
typescript/src/: gtfs.ts  types.ts  util.ts
typescript/src/models/: agency.ts  dateRange.ts  feed.ts  index.ts  route.ts  schedule.ts  stop.ts  stopTime.ts  timetable.ts  trip.ts
typescript/src/tables/: agencies.ts  index.ts  routes.ts  schedules.ts  stops.ts  trips.ts
typescript/src/types/: enumerations.ts  index.ts  models.ts  time.ts  types.ts
typescript/src/util/: csv.ts  date.ts  filterObject.ts  format.ts  index.ts  parse.ts  split.ts  unique.ts  unzip.ts  util.ts
