[tool.poetry]
name = "railroaded"
version = "0.2.0"
description = ""
authors = ["Benj Wiswell <benjwiswell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
seared = {git = "https://www.github.com/bwiswell/seared.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
