[tool.poetry]
name = "railroaded"
version = "0.3.0"
description = ""
authors = ["Benj Wiswell <benjwiswell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seared = {git = "https://github.com/bwiswell/seared.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
